--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Webpage</title>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="nav_menu" id="nav-menu">
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="nav_toggle" id="nav-toggle">
+            <i class='bx bx-menu'></i>
+        </div>
     </div>
 
     <!-- Hero section -->
@@ -45,8 +53,8 @@
     <div class="snapshot-box">
         <div class="snapshot-box-content">
             <div class="box1">
-                    <div class="circle"></div>
-                    <h5>Linda, Manager</h5>
+                <div class="circle"></div>
+                <h5>Linda, Manager</h5>
             </div>
             <div class="box1">
                 <div class="circle"></div>
@@ -92,7 +100,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sapiente. Nuleos rem!</p>
         </div>
         <div class="footer-input">
-            <input type="text" placeholder="Name"> 
+            <input type="text" placeholder="Name">
             <input type="email" placeholder="Email">
         </div>
         <div class="footer-textarea">
@@ -103,5 +111,7 @@
         </div>
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
+    <script src="app.js"></script>
 </body>
+
 </html>
